# miniucd

./: Doxyfile  LICENSE  MiniUCDConfig.cmake  README.md  package-lock.json  package.json  seaborg-config.json
include/: miniucd.h  regc_ucd.inc
tests/: CMakeLists.txt  main.c  mainSuite.inc  testUcdPropertyAccessors.c
tools/: .gitignore  config.js  miniucd.tmpl.ejs.h  regc_ucd.tmpl.ejs.inc  ucdFetch.js  ucdGenerate.js  ucdParse.js  ucdPropertyTypes.js  ucdRegex.js
